--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ping-test",
   "version": "0.9.0",
   "description": "Check if a an address is reachable and trigger webhook on state change",
-  "main": "ping-test.js",
+  "main": "index.js",
   "dependencies": {
     "humanize-duration": "^3.7.1",
     "moment": "^2.13.0",
