--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ping-test",
   "version": "0.9.0",
-  "description": "Check if a an address is reachable and trigger webhook on state change",
+  "description": "Check if an address is reachable and trigger webhook on state change",
   "main": "index.js",
   "dependencies": {
     "humanize-duration": "^3.7.1",
